
    o	libtool has been updated to 2.2.6a.

    o	--with-ICU is now the default: this means that ICU will be
	used for collation on Mac OS >= 10.4.

    o	make install-tests can be used to install the test files,
	to allowed an installed version of R to be tested -- see the
	R-admin manual.  This is also supported by the function
	testInstalledPackages() in package 'tools'.


PACKAGE INSTALLATION

    o	install.packages() is able to infer that repos=NULL was
	intended from the extension on the file name specified as 'pkgs'.

	On Mac OS X it now supports local binary packages with .tar.gz
	extension. Nonetheless .tgz remains the preferred extension
	and is expected in repositories.

	It now checks >= version dependencies for dependent packages,
	and so will install a newer version of a dependency if needed
	and available on the repositories.

	The library being installed into is considered when looking
	for installed packages if it is not already part of
	.libPaths() (as INSTALL already does).

 	It has a new argument 'Ncpus' to support parallel installs of
	source packages.

    o	HTML links will be resolved first to the standard packages: this
	avoids other installed packages diverting help on e.g. qr()
	and plot() to themselves.

    o	A check is done that the R files can be parsed: this both
	prevents a broken package without lazy-loading from being
	installed and gives better diagnostics.

    o	install.packages() gains a 'configure.vars' argument, and both
	this and 'configure.args' get their defaults from options().

    o	There is a unified R script for INSTALL on both Unix-alike and
	Windows that takes option names used by either in the past.

	It adds --no-multiarch to disable building other than the main
	sub-architecture, and allows multiple instances of
	--configure-args and --configure-vars (which will be
	concatenated).

	New option --install-tests will install any package-specific
	tests.


C-LEVEL FACILITIES
